--- a/package.json
+++ b/package.json
@@ -14,11 +14,32 @@
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
+    "@radix-ui/react-accordion": "^1.2.2",
+    "@radix-ui/react-alert-dialog": "^1.1.4",
+    "@radix-ui/react-aspect-ratio": "^1.1.1",
+    "@radix-ui/react-avatar": "^1.1.2",
+    "@radix-ui/react-checkbox": "^1.1.3",
+    "@radix-ui/react-context-menu": "^2.2.4",
+    "@radix-ui/react-dropdown-menu": "^2.1.4",
+    "@radix-ui/react-hover-card": "^1.1.4",
+    "@radix-ui/react-label": "^2.1.1",
+    "@radix-ui/react-menubar": "^1.1.4",
+    "@radix-ui/react-navigation-menu": "^1.2.3",
+    "@radix-ui/react-toast": "^1.2.4",
+    "class-variance-authority": "^0.7.1",
+    "cmdk": "^1.0.4",
+    "embla-carousel-react": "^8.5.1",
     "framer-motion": "^10.18.0",
+    "lucide-react": "^0.468.0",
     "next": "13.5.1",
     "react": "18.2.0",
+    "react-day-picker": "^9.4.4",
     "react-dom": "18.2.0",
-    "react-icons": "^5.0.1"
+    "react-hook-form": "^7.54.1",
+    "react-icons": "^5.0.1",
+    "recharts": "^2.15.0",
+    "tailwind-merge": "^2.5.5",
+    "vaul": "^1.1.2"
   },
   "devDependencies": {
     "@types/node": "^20.0.0",
